allow custom no results message

--- a/shared/no_results.handlebars
+++ b/shared/no_results.handlebars
@@ -1,1 +1,1 @@
-<div class="zci__no-results  t-s--screen-xs"><span class="zci__no-results__txt">DDG.Text.SORRY_NO_RESULTS</span></div>
+<div class="zci__no-results  t-s--screen-xs"><span class="zci__no-results__txt">{{#if message}}{{message}}{{else}}DDG.Text.SORRY_NO_RESULTS{{/if}}</span></div>
