--- a/item/news_item.handlebars
+++ b/item/news_item.handlebars
@@ -13,7 +13,11 @@
 	</div>
 	<div class="tile__foot  tile__foot--news">
 		<span class="news-more-at">
-			{{{favicon url lazy="1" className="tile__favicon"}}}
+			{{#if favicon}}
+				{{{favicon favicon lazy="1" className="tile__favicon"}}}
+			{{else}}
+				{{{favicon url lazy="1" className="tile__favicon"}}}
+			{{/if}}
 			<span class="news-source">{{ellipsis source 20}}</span>
 		</span>
 		<span class="sep  tile__sep"></span>
