change field to favicon_url

--- a/item/news_item.handlebars
+++ b/item/news_item.handlebars
@@ -14,7 +14,7 @@
 	<div class="tile__foot  tile__foot--news">
 		<span class="news-more-at">
 			{{#if favicon}}
-				{{{favicon favicon lazy="1" className="tile__favicon"}}}
+				{{{favicon favicon_url lazy="1" className="tile__favicon"}}}
 			{{else}}
 				{{{favicon url lazy="1" className="tile__favicon"}}}
 			{{/if}}
