update attribute in if statement

--- a/item/news_item.handlebars
+++ b/item/news_item.handlebars
@@ -13,7 +13,7 @@
 	</div>
 	<div class="tile__foot  tile__foot--news">
 		<span class="news-more-at">
-			{{#if favicon}}
+			{{#if favicon_url}}
 				{{{favicon favicon_url lazy="1" className="tile__favicon"}}}
 			{{else}}
 				{{{favicon url lazy="1" className="tile__favicon"}}}
