--- a/item_detail/images_detail.handlebars
+++ b/item_detail/images_detail.handlebars
@@ -1,10 +1,18 @@
 <div class="detail__inner">
     <div class="detail__media  detail__media--images">
-        <span class="detail__media__img-wrapper  js-image-detail-wrapper">
-            <div {{#if detail.width}}style="width:{{detail.width}};height:{{detail.height}};top:{{detail.top}};"{{/if}} class="detail__media__img-bg  js-detail-img  js-detail-img-bg"></div>
-            <img src="{{imageProxy thumbnail}}" {{#if detail.width}}style="width:{{detail.width}};height:{{detail.height}};top:{{detail.top}};"{{/if}} class="detail__media__img-thumbnail  js-detail-img  js-detail-img-thumb" />
-            <img {{#if detail.width}}style="width:{{detail.width}};height:{{detail.height}};top:{{detail.top}};"{{/if}} alt="{{title}}" class="detail__media__img-highres  js-detail-img  js-detail-img-high" />
-        </span>
+        {{#if linkImage}}
+            <a href="{{image}}" target="_blank" class="detail__media__img-wrapper js-image-detail-wrapper">
+        {{else}}}
+            <span class="detail__media__img-wrapper  js-image-detail-wrapper">
+        {{/if}}
+                <div {{#if detail.width}}style="width:{{detail.width}};height:{{detail.height}};top:{{detail.top}};"{{/if}} class="detail__media__img-bg  js-detail-img  js-detail-img-bg"></div>
+                <img src="{{imageProxy thumbnail}}" {{#if detail.width}}style="width:{{detail.width}};height:{{detail.height}};top:{{detail.top}};"{{/if}} class="detail__media__img-thumbnail  js-detail-img  js-detail-img-thumb" />
+                <img {{#if detail.width}}style="width:{{detail.width}};height:{{detail.height}};top:{{detail.top}};"{{/if}} alt="{{title}}" class="detail__media__img-highres  js-detail-img  js-detail-img-high" />
+        {{#if linkImage}}
+            </a>
+        {{else}}
+            </span>
+        {{/if}}
     </div>
     <div class="detail__body  detail__body--images">
         <div class="c-detail  detail__body__content">
