remove extra bracket

--- a/item_detail/images_detail.handlebars
+++ b/item_detail/images_detail.handlebars
@@ -2,7 +2,7 @@
     <div class="detail__media  detail__media--images">
         {{#if linkImage}}
             <a href="{{image}}" target="_blank" class="detail__media__img-wrapper js-image-detail-wrapper">
-        {{else}}}
+        {{else}}
             <span class="detail__media__img-wrapper  js-image-detail-wrapper">
         {{/if}}
                 <div {{#if detail.width}}style="width:{{detail.width}};height:{{detail.height}};top:{{detail.top}};"{{/if}} class="detail__media__img-bg  js-detail-img  js-detail-img-bg"></div>
