double wrap dropdowns

--- a/core/metabar.handlebars
+++ b/core/metabar.handlebars
@@ -18,7 +18,7 @@
             {{/if}}
         </div>
         {{#if showDropdowns}}
-            <div class="metabar__dropdowns js-metabar-dropdowns is-loading"></div>
+            <div class="metabar__dropdowns-wrap"><div class="metabar__dropdowns js-metabar-dropdowns is-loading"></div></div>
         {{/if}}
 	</div>
 </div>
