--- a/item_detail/images_detail.handlebars
+++ b/item_detail/images_detail.handlebars
@@ -1,11 +1,15 @@
 <div class="detail__inner">
     <div class="detail__media  detail__media--images">
         <div class="detail__media__img-wrapper  js-image-detail-wrapper">
+        {{#if linkImage}}
             <a {{#if detail.width}}style="width:{{detail.width}};height:{{detail.height}};top:{{detail.top}};"{{/if}} href="{{image}}" class="detail__media__img-link  js-detail-img  js-image-detail-link" target="_blank">
+        {{/if}}
                 <div {{#if detail.width}}style="width:{{detail.width}};height:{{detail.height}};top:{{detail.top}};"{{/if}} class="detail__media__img-bg  js-detail-img  js-detail-img-bg"></div>
                 <img src="{{imageProxy thumbnail}}" {{#if detail.width}}style="width:{{detail.width}};height:{{detail.height}};top:{{detail.top}};"{{/if}} class="detail__media__img-thumbnail  js-detail-img  js-detail-img-thumb" />
                 <img {{#if detail.width}}style="width:{{detail.width}};height:{{detail.height}};top:{{detail.top}};"{{/if}} alt="{{title}}" class="detail__media__img-highres  js-detail-img  js-detail-img-high" />
+        {{#if linkImage}}
             </a>
+        {{/if}}
         </div>
     </div>
     <div class="detail__body  detail__body--images">
