make news date/time in tile optional element, and hide separator when it's not there

--- a/item/news_item.handlebars
+++ b/item/news_item.handlebars
@@ -26,7 +26,9 @@
 			{{/if}}
 			<span class="news-source">{{ellipsis source 20}}</span>
 		</span>
-		<span class="sep  tile__sep"></span>
-		<span class="tile__time">{{{relative_time}}}</span>
+		{{#if relative_time}}
+			<span class="sep  tile__sep"></span>
+			<span class="tile__time">{{{relative_time}}}</span>
+		{{/if}}
 	</div>
 </div>
