convert news tile to use anchors

--- a/item/news_item.handlebars
+++ b/item/news_item.handlebars
@@ -1,4 +1,4 @@
-<div class="tile  tile--c--w  tile--news" data-link="{{url}}">
+<{{#if url}}a href="{{url}}"{{else}}div{{/if}} class="tile  tile--c--w  tile--news">
 	{{#if image}}
 		<div class="tile__media">
 			<div class="tile__media__img" style="background-image:url({{imageProxy image}});"></div>
@@ -12,7 +12,7 @@
 		{{/if}}
 	{{/if}}
 	<div class="tile__body  has-foot">
-		<h3 class="tile__title  {{#if fetch_image}}tile__title--under-image{{/if}}  js-ellipsis"><a href="{{url}}" title="{{title}}">{{{title}}}</a></h3>
+		<h3 class="tile__title  {{#if fetch_image}}tile__title--under-image{{/if}}  js-ellipsis">{{{title}}}</h3>
         {{^if fetch_image}}
 		    <div class="tile__content  tile__content--news  js-ellipsis">{{{excerpt}}}</div>
         {{/if}}
@@ -31,4 +31,4 @@
 			<span class="tile__time">{{{relative_time}}}</span>
 		{{/if}}
 	</div>
-</div>
+</{{#if url}}a href="{{url}}"{{else}}div{{/if}}>
