--- a/item/products_item.handlebars
+++ b/item/products_item.handlebars
@@ -1,14 +1,10 @@
-<div class="tile  tile--pr {{#if elClass}}{{elClass}}{{else}}{{#if meta.elClass.tile}}{{meta.elClass.tile}}{{else}}tile--c{{/if}}{{/if}} has-detail  tile--{{parentId}} {{#if meta.options.rating}} has-rating{{/if}} opt--t-xxs" data-link="{{url}}">
+<{{#if url}}a href="{{url}}"{{else}}div{{/if}} class="tile  tile--pr {{#if elClass}}{{elClass}}{{else}}{{#if meta.elClass.tile}}{{meta.elClass.tile}}{{else}}tile--c{{/if}}{{/if}} has-detail  tile--{{parentId}} {{#if meta.options.rating}} has-rating{{/if}} opt--t-xxs">
 	<div class="tile__media  tile__media--pr">
 		<img src="" data-src="{{{imageProxy img}}}" alt="{{title}}" class="tile__media__img  js-lazyload" />
 		{{#and showBadge meta.options.badge}}{{{include meta.options.badge}}}{{/and}}
 	</div>
 	<div class="tile__body  tile__body--pr">
-        {{#if url}}
-            {{{formatTitle heading el="h6" className="tile__title" classNameSec="tile__title--pr" href="url" optSub=true ellipsis=100}}}
-        {{else}}
-            {{{formatTitle heading el="h6" className="tile__title" classNameSec="tile__title--pr" optSub=true ellipsis=100}}}
-        {{/if}}
+        {{{formatTitle heading el="h6" className="tile__title" classNameSec="tile__title--pr" optSub=true ellipsis=100}}}
 	<div class="tile__tx  tile--pr__sub  one-line">
 		{{#and meta.options.price price}}
 			<span class="tile--pr__price  price">{{price}}</span>
@@ -26,4 +22,4 @@
 		</div>
         {{/if}}
 	</div>
-</div>
+</{{#if url}}a{{else}}div{{/if}}>
