--- a/item/videos_item.handlebars
+++ b/item/videos_item.handlebars
@@ -5,7 +5,11 @@
 		{{!<div class="tile--vid__overlay"><i class="tile--vid__overlay__icon">&#9654;</i></div>}}
 	</div>
 	<div class="tile__body">
+        {{#if url}}
+		<a href="url" class="tile__title  tile__title--2">{{ellipsis title 55}}</a>
+        {{else}}
 		<h6 class="tile__title  tile__title--2">{{ellipsis title 55}}</h6>
+        {{/if}}
 		<span>
 			{{{favicon url lazy="1" className="tile__favicon"}}}
 			<span class="video-source">{{provider}}</span>
