--- a/core/duckbar_tab.handlebars
+++ b/core/duckbar_tab.handlebars
@@ -1,3 +1,3 @@
-<li class="zcm__item  is-hidden">
-    <a data-zci-link="{{{id}}}" class="zcm__link  js-zci-link  js-zci-link--{{{id}}}  " href="#">{{{l name}}}</a>
+<li class="zcm__item  {{^if visible}}is-hidden{{/if}}">
+    <a data-zci-link="{{{id}}}" class="zcm__link  js-zci-link  js-zci-link--{{{id}}} {{#if active}}is-active{{/if}}" href="#">{{{l name}}}</a>
 </li>
