--- a/shared/products_amazon_buy.handlebars
+++ b/shared/products_amazon_buy.handlebars
@@ -1,1 +1,1 @@
-    <span class="detail__callout--pr"><a href="{{url}}" class="btn btn--primary">DDG.Text.MORE_AT Amazon</a></span>
+    <span class="detail__callout--pr"><a href="{{url}}" class="btn btn--primary">DDG.Text.MORE_AT {{meta.sourceName}}</a></span>
