add option to always show secondary text

--- a/core/metabar.handlebars
+++ b/core/metabar.handlebars
@@ -7,7 +7,7 @@
             </div> 
         {{/if}}
         {{#if secondaryText}}
-            <div class="metabar__secondary-text  hide--screen-s">{{{secondaryText}}}{{#if showMoreAt}}<span class="sep"></span>{{/if}}</div>
+            <div class="metabar__secondary-text  {{^if alwaysShowSecondaryText}}hide--screen-s{{/if}}">{{{secondaryText}}}{{#if showMoreAt}}<span class="sep"></span>{{/if}}</div>
         {{/if}}
         <div class="metabar__attribution  js-attribution  hide--screen-s  is-hidden">{{#if showMoreAt}}<span class="metabar__attribution__sep sep"></span>{{else}}{{#if secondaryText}}<span class="metabar__attribution__sep sep"></span>{{/if}}{{/if}}</div>
         <div class="metabar__primary-text js-metabar-primary is-loading">
