Added role=button to image template

--- a/item/images_item.handlebars
+++ b/item/images_item.handlebars
@@ -1,5 +1,5 @@
 {{~#unless this.n~}}
-<div class="tile  tile--img  has-detail" style="width:{{tileWidth}}px;">
+<div class="tile  tile--img  has-detail" style="width:{{tileWidth}}px;" role="button">
     <div class="tile--img__media">
         <span class="tile--img__media__i"><img class="tile--img__img  js-lazyload" src="" data-src="{{imageProxy thumbnail}}" alt="{{title}}" /></span>
     </div>
