Add the 'report images' link to the image detail.

--- a/item_detail/images_detail.handlebars
+++ b/item_detail/images_detail.handlebars
@@ -26,6 +26,7 @@
                 {{^if isMobile}}
                     <a href="{{image}}" target="_blank" class="c-detail__btn c-detail__btn--bottom btn js-image-detail-link">DDG.Text.VIEW_FILE</a>
                 {{/if}}
+                <a href="#" class="c-detail__report js-image-report-link">DDG.Text.REPORT_IMAGE</a>
             </div>
         </div>
     </div>
